--- a/examples/hello-world/index.html
+++ b/examples/hello-world/index.html
@@ -5,9 +5,13 @@
 	<title>Hello World</title>
 </head>
 <body>
+	<h1>Hello World</h1>
 	<script src="../../build/build.js"></script>
 	<script>
 	  require('maple');
+	  require('maple/view');
+	  require('maple/store');
+	  require('maple/emitter');
 	</script>
 </body>
 </html>
