--- a/test/index.html
+++ b/test/index.html
@@ -11,6 +11,7 @@
     <script>mocha.setup('bdd')</script>
     <script src="../build/build.js"></script>
     <script src="utils.js"></script>
+    <script src="emitter.js"></script>
     <script>
       mocha.run();
     </script>
