--- a/test/index.html
+++ b/test/index.html
@@ -12,6 +12,7 @@
     <script src="../build/build.js"></script>
     <script src="utils.js"></script>
     <script src="emitter.js"></script>
+    <script src="store.js"></script>    
     <script>
       mocha.run();
     </script>
