--- a/test/index.html
+++ b/test/index.html
@@ -12,8 +12,8 @@
     <script src="../build/build.js"></script>
     <script src="utils.js"></script>
     <script src="emitter.js"></script>
-    <script src="store.js"></script>   
-    <script src="binding.js"></script>        
+    <script src="store.js"></script>
+    <script src="supplant.js"></script>            
     <script>
       mocha.run();
     </script>
