--- a/test/index.html
+++ b/test/index.html
@@ -13,7 +13,8 @@
     <script src="utils.js"></script>
     <script src="emitter.js"></script>
     <script src="store.js"></script>
-    <script src="supplant.js"></script>            
+    <script src="supplant.js"></script>  
+    <script src="binding.js"></script>                
     <script>
       mocha.run();
     </script>
