working on a gulp like website

--- a/index.html
+++ b/index.html
@@ -3,13 +3,41 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Maple</title>
+	<link rel="stylesheet" href="build/build.css">
 </head>
 <body>
-	<header>
-		<nav>
-			<a href="/home">Home</a>
+	<header class="header container txtcenter center">
+		<nav class="nav">
+			<a class="link active" href="/home">Home</a>
+			<a class="link" href="">Learn</a>
+			<a class="link" href="">Enterprise</a>	
+			<a class="link" href="">Github</a>			
 		</nav>
+		<h3>
+			<img class="logo-img" src="logo.png" alt="">
+			<span class="logo title">maple.js</span>
+		</h3>
+		<p class="logo-title slogan">Your magic toolset to create amazing web applications</p>
+		<footer class="next">
+			<button class="scroll"></button>
+		</footer>
 	</header>
-	<footer></footer>
+	<div class="container center txtcenter">
+		<section>
+			<h3 class="title">Powerful. Fast. Easy to use.</h3>
+			<p class="slogan">Maple makes developping large scale applications as easy as a todo list.</p>
+			<div class="autogrid3">
+				<div>Lorem</div>
+				<div>Lorem</div>
+				<div>lorem</div>
+			</div>
+			<div class="autogrid3">
+				<div>Lorem</div>
+				<div>Lorem</div>
+				<div>lorem</div>
+			</div>
+		</section>
+	</div>
+	<footer class="footer"></footer>
 </body>
 </html>
