add view and its tests

--- a/test/index.html
+++ b/test/index.html
@@ -14,7 +14,8 @@
     <script src="emitter.js"></script>
     <script src="store.js"></script>
     <script src="supplant.js"></script>  
-    <script src="binding.js"></script>                
+    <script src="binding.js"></script>  
+    <script src="view.js"></script>                    
     <script>
       mocha.run();
     </script>
