--- a/test/index.html
+++ b/test/index.html
@@ -15,7 +15,8 @@
     <script src="store.js"></script>
     <script src="supplant.js"></script>  
     <script src="binding.js"></script>  
-    <script src="view.js"></script>                    
+    <script src="view.js"></script>  
+    <script src="architecture.js"></script>                        
     <script>
       mocha.run();
     </script>
