work on template

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<img class="logo-img" src="logo.png" alt="">
 			<span class="logo title">maple.js</span>
 		</h3>
-		<p class="logo-title slogan">Your magic toolset to create amazing web applications</p>
+		<p class="logo-title slogan">Your essential toolset to create amazing web applications</p>
 		<footer class="next">
 			<button class="scroll"></button>
 		</footer>
@@ -26,18 +26,42 @@
 		<section>
 			<h3 class="title">Powerful. Fast. Easy to use.</h3>
 			<p class="slogan">Maple makes developping large scale applications as easy as a todo list.</p>
-			<div class="autogrid3">
-				<div>Lorem</div>
-				<div>Lorem</div>
-				<div>lorem</div>
-			</div>
-			<div class="autogrid3">
-				<div>Lorem</div>
-				<div>Lorem</div>
-				<div>lorem</div>
+			<div class="content">
+				<div class="autogrid2">
+					<div>
+						<h4>Efficient</h4>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae, cumque, eius, explicabo necessitatibus doloribus corporis ab aperiam.</p>
+					</div>
+					<div>
+						<h4>Less code</h4>	
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae, cumque, eius, explicabo necessitatibus doloribus corporis ab aperiam.</p>				
+					</div>
+				</div>
+				<div class="autogrid2">
+					<div>
+						<h4>Maintainable</h4>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae, cumque, eius, explicabo necessitatibus doloribus corporis ab aperiam .</p>
+					</div>
+					<div>
+						<h4>Easy to learn</h4>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae, cumque, eius, explicabo necessitatibus doloribus corporis ab aperiam.</p>				
+					</div>
+				</div>
 			</div>
 		</section>
+		<section>
+			<p class="slogan">Your coffee is always better with some maple syrup!</p>
+			<button class="btn">showcase</button>
+		</section>
 	</div>
-	<footer class="footer"></footer>
+	<footer class="footer container center txtcenter">
+		<h4>Proudly made  in Canada by <a href="">Bredele</a></h4>
+		<p>Follow me on <a href="">Github</a> or <a href="">twitter</a></p>
+	</footer>
+	<script src="build/build.js"></script>
+	<script>
+	  //maple command line could do that for use
+	  require('showcase');
+	</script>
 </body>
 </html>
