--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Maple</title>
-	<link rel="stylesheet" href="build/build.css">
+	<link rel="stylesheet" href="./build/build.css">
 </head>
 <body>
 	<header class="header container txtcenter center">
@@ -19,7 +19,7 @@
 		</h3>
 		<p class="logo-title slogan">Your essential toolset to create amazing web applications</p>
 		<footer class="next">
-			<button class="scroll"></button>
+			<button class="scroll"><div class="icon-down"></div></button>
 		</footer>
 	</header>
 	<div class="container center txtcenter">
