--- a/src/showcase/showcase.html
+++ b/src/showcase/showcase.html
@@ -1,6 +1,7 @@
 <div class="showcase">
 	<header class="toolbar">
-		<div class="right icon-cross toolbar-btn"></div>
+		<div class="left icon-list toolbar-btn"></div>
+		<div class="right icon-cross toolbar-btn" event="on:click,close"></div>
 	</header>
 	<section></section>
 </div>
