--- a/maple.html
+++ b/maple.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Maple</title>
-	<link rel="stylesheet" href="./build/build.css">
+	<link rel="stylesheet" href="public/maple.css">
 </head>
 <body>
 	<header class="header container txtcenter center">
@@ -58,7 +58,7 @@
 		<h4>Proudly made  in Canada by <a href="">Bredele</a></h4>
 		<p>Follow me on <a href="">Github</a> or <a href="">twitter</a></p>
 	</footer>
-	<script src="build/build.js"></script>
+	<script src="public/maple.js"></script>
 	<script>
 	  //maple command line could do that for use
 	  require('showcase');
