--- a/src/showcase/showcase.html
+++ b/src/showcase/showcase.html
@@ -3,5 +3,5 @@
 		<div class="left icon-list toolbar-btn"></div>
 		<div class="right icon-cross toolbar-btn" event="on:click,close"></div>
 	</header>
-	<section></section>
+	<section class="stack"></section>
 </div>
