working on website template

--- a/maple.html
+++ b/maple.html
@@ -30,21 +30,24 @@
 				<div class="autogrid2">
 					<div>
 						<h4>Efficient</h4>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae, cumque, eius, explicabo necessitatibus doloribus corporis ab aperiam.</p>
+						<p></p>
 					</div>
 					<div>
 						<h4>Less code</h4>	
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae, cumque, eius, explicabo necessitatibus doloribus corporis ab aperiam.</p>				
+						<p>Write dramatically less code with Maple's live binding and plugin engine. Like jQuery you can reuse or create your own plugins.</p>				
 					</div>
 				</div>
 				<div class="autogrid2">
 					<div>
 						<h4>Maintainable</h4>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae, cumque, eius, explicabo necessitatibus doloribus corporis ab aperiam .</p>
+						<p>
+							Maple.js has been built with enterprise needs in mind. Out of the box, it comes in the form of extensible components with an architectural framework, test <!-- and integration --> environment, guidelines and mores.
+						</p>
 					</div>
 					<div>
 						<h4>Easy to learn</h4>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae, cumque, eius, explicabo necessitatibus doloribus corporis ab aperiam.</p>				
+						<p>
+							No scatterbrained concept. Maple.js is as simple as old plain JavaScript and instead reinventing the wheel you can focus on your job, make an awesome app!</p>				
 					</div>
 				</div>
 			</div>
