--- a/src/todo/todo.html
+++ b/src/todo/todo.html
@@ -1,4 +1,5 @@
 <section id="todoapp">
+  <button class="benchmark" events="on:click,benchmark">200</button>
   <header id="header">
     <input id="new-todo" placeholder="What needs to be done?" events="on:keypress > 13,add" autofocus>
   </header>
