--- a/src/todo/todo.html
+++ b/src/todo/todo.html
@@ -1,7 +1,7 @@
 <section id="todoapp">
   <button class="benchmark" events="on:click,benchmark">200</button>
   <header id="header">
-    <input id="new-todo" placeholder="What needs to be done?" events="on:keypress > 13,add" autofocus>
+    <input id="new-todo" placeholder="What needs to be done?" events="on:keypress > 13,add">
   </header>
   <section id="main">
     <input id="toggle-all" type="checkbox" events="on:click,toggleAll">
