--- a/maple.html
+++ b/maple.html
@@ -18,6 +18,7 @@
 			<span class="logo title">maple.js</span>
 		</h3>
 		<p class="logo-title slogan">Your essential toolset to create amazing web applications</p>
+		<p><span>0.1.0: </span>production (min + gzip 3kb) </p>
 		<footer class="next">
 			<button class="scroll"><div class="icon-down"></div></button>
 		</footer>
@@ -30,7 +31,7 @@
 				<div class="autogrid2">
 					<div>
 						<h4>Efficient</h4>
-						<p></p>
+						<p>Maple.js is not only small but also really fast. It has been conceived around this simple question: why get complicated?</p>
 					</div>
 					<div>
 						<h4>Less code</h4>	
@@ -58,9 +59,10 @@
 		</section>
 	</div>
 	<footer class="footer container center txtcenter">
-		<h4>Proudly made  in Canada by <a href="">Bredele</a></h4>
-		<p>Follow me on <a href="">Github</a> or <a href="">twitter</a></p>
+		<h4>Proudly made in <span class="active">Canada</span></h4>
+		<p>Follow me on <a class="active" href="">Github</a> or <a class="active" href="">twitter</a></p>
 	</footer>
+	<script src="public/test.js"></script>	
 	<script src="public/maple.js"></script>
 	<script>
 	  //maple command line could do that for use
