--- a/maple.html
+++ b/maple.html
@@ -20,7 +20,7 @@
 		<p class="logo-title slogan">Your essential toolset to create amazing web applications</p>
 		<p><span>0.1.0: </span>production (min + gzip 3kb) </p>
 		<footer class="next">
-			<button class="scroll"><div class="icon-down"></div></button>
+			<button class="scroll" data-event="on:click,scroll"><div class="icon-down"></div></button>
 		</footer>
 	</header>
 	<div class="container center txtcenter">
@@ -55,7 +55,7 @@
 		</section>
 		<section>
 			<p class="slogan">Your coffee is always better with some maple syrup!</p>
-			<button class="btn">showcase</button>
+			<button class="btn" data-event="on:click,show">showcase</button>
 		</section>
 	</div>
 	<footer class="footer container center txtcenter">
