add first template

--- a/index.html
+++ b/index.html
@@ -1,4 +1,59 @@
 ---
 layout: base
 ---
-Hello
+<header class="header container txtcenter center">
+	<nav class="nav">
+		<a class="link active" href="/home">Home</a>
+		<a class="link" href="">Learn</a>
+		<a class="link" href="">Enterprise</a>	
+		<a class="link" href="">Github</a>			
+	</nav>
+	<h3>
+		<img class="logo-img" src="logo.png" alt="">
+		<span class="logo title">maple.js</span>
+	</h3>
+	<p class="logo-title slogan">Your essential toolset to create amazing web applications</p>
+	<p><span>0.1.0: </span>production (min + gzip 3kb) </p>
+	<footer class="next">
+		<button class="scroll" data-event="on:click,scroll"><div class="icon-down"></div></button>
+	</footer>
+</header>
+<div class="container center txtcenter">
+	<section>
+		<h3 class="title">Powerful. Fast. Easy to use.</h3>
+		<p class="slogan">Maple makes developping large scale applications as easy as a todo list.</p>
+		<div class="content">
+			<div class="autogrid2">
+				<div>
+					<h4>Efficient</h4>
+					<p>Maple.js is not only small but also really fast. It has been conceived around this simple question: why get complicated?</p>
+				</div>
+				<div>
+					<h4>Less code</h4>	
+					<p>Write dramatically less code with Maple's live binding and plugin engine. Like jQuery you can reuse or create your own plugins.</p>				
+				</div>
+			</div>
+			<div class="autogrid2">
+				<div>
+					<h4>Maintainable</h4>
+					<p>
+						Maple.js has been built with enterprise needs in mind. Out of the box, it comes in the form of extensible components with an architectural framework, test <!-- and integration --> environment, guidelines and mores.
+					</p>
+				</div>
+				<div>
+					<h4>Easy to learn</h4>
+					<p>
+						No scatterbrained concept. Maple.js is as simple as old plain JavaScript and instead reinventing the wheel you can focus on your job, make an awesome app!</p>				
+				</div>
+			</div>
+		</div>
+	</section>
+	<section>
+		<p class="slogan">Your coffee is always better with some maple syrup!</p>
+		<button class="btn" data-event="on:click,show">showcase</button>
+	</section>
+</div>
+<footer class="footer container center txtcenter">
+	<h4>Proudly made in <span class="active">Canada</span></h4>
+	<p>Follow me on <a class="active" href="">Github</a> or <a class="active" href="">twitter</a></p>
+</footer>
