--- a/apps/maple.html
+++ b/apps/maple.html
@@ -14,7 +14,7 @@
 			<a class="link" href="">Github</a>			
 		</nav>
 		<h3>
-			<img class="logo-img" src="logo.png" alt="">
+			<img class="logo-img" src="bootstrap/logo.png" alt="">
 			<span class="logo title">maple.js</span>
 		</h3>
 		<p class="logo-title slogan">Your essential toolset to create amazing web applications</p>
