--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@ layout: base
 ---
 <header class="header container txtcenter center">
 	<nav class="nav">
-		<a class="link active" href="/home">Home</a>
-		<a class="link" href="">Learn</a>
-		<a class="link" href="">Enterprise</a>	
-		<a class="link" href="">Github</a>			
+		<a class="link active" href="/maple">Home</a>
+		<a class="link" href="./learn">Learn</a>
+		<a class="link" href="./learn">Enterprise</a>	
+		<a class="link" href="http://github.com/leafs/maple" target="_blank">Github</a>			
 	</nav>
 	<h3>
 		<img class="logo-img" src="./assets/boostrap/logo.png" alt="">
