--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@ layout: base
 <header class="header container txtcenter center">
 	<nav class="nav">
 		<a class="link active" href="/maple">Home</a>
-		<a class="link" href="./learn">Learn</a>
-		<a class="link" href="./learn">Enterprise</a>	
+<!-- 		<a class="link" href="./learn">Learn</a>
+		<a class="link" href="./learn">Enterprise</a>	 -->
 		<a class="link" href="http://github.com/leafs/maple" target="_blank">Github</a>			
 	</nav>
 	<h3>
