--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ layout: base
 		<a class="link" href="http://github.com/leafs/maple" target="_blank">Github</a>			
 	</nav>
 	<h3>
-		<img class="logo-img" src="./assets/boostrap/logo.png" alt="">
+		<img class="logo-img" src="./assets/bootstrap/logo.png" alt="">
 		<span class="logo title">maple.js</span>
 	</h3>
 	<p class="logo-title slogan">Your essential toolset to create amazing web applications</p>
