--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ layout: base
 		</div>
 	</section>
 	<section>
-		<p class="slogan">Your coffee is always better with some maple syrup!</p>
+		<p class="slogan">A good day always starts with some maple syrup!</p>
 		<button class="btn" data-event="on:click,show">showcase</button>
 	</section>
 </div>
