--- a/apps/maple.html
+++ b/apps/maple.html
@@ -8,10 +8,10 @@
 <body>
 	<header class="header container txtcenter center">
 		<nav class="nav">
-			<a class="link active" href="/home">Home</a>
-			<a class="link" href="">Learn</a>
-			<a class="link" href="">Enterprise</a>	
-			<a class="link" href="">Github</a>			
+		<a class="link active" href="/maple">Guide</a>
+		<a class="link" href="/maple">API Reference</a>
+		<a class="link" href="">Enterprise</a>		
+		<a class="link" href="http://github.com/leafs/maple" target="_blank">Github</a>			
 		</nav>
 		<h3>
 			<img class="logo-img" src="bootstrap/logo.png" alt="">
