--- a/test/index.html
+++ b/test/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <div id="mocha"></div>
+    <script src="polyfill.js"></script>
     <script src="mocha/mocha.js"></script>
     <script>mocha.setup('bdd')</script>
     <script src="../build/build.js"></script>
